# ui-automation-backend

./: main.py  pyproject.toml  readme.md
celery_tasks/: selenium_tasks.py  tasks.py
config/: celery_config.py  celery_utils.py
internal/: __init__.py  browser.py  operations.py  selenium_tests.py  tester.py
models/: enums.py  group.py  page.py  page_element.py  page_operation.py  page_step.py  project.py  scenario.py  scenario_group.py  scenario_operation.py  scenario_page.py  suite.py  suite_group.py
routers/: page.py  page_element.py  page_operation.py  page_step.py  project.py  scenario.py  scenario_operation.py  scenario_page.py  suite.py  task.py  universities.py  user.py
schemas/: enums.py  page.py  page_element.py  page_operation.py  page_step.py  project.py  scenario.py  scenario_operation.py  scenario_page.py  schemas.py  suite.py  task.py
selenoid/: deploy.sh
selenoid/config/: browsers.json
service/: execution.py  page_element_service.py  page_operation_service.py  page_service.py  page_step_service.py  project_service.py  scenario_operation_service.py  scenario_page_service.py  scenario_service.py  universities.py
sql_app/: __init__.py  curd.py  database.py  models.py  schemas.py
sqls/: projects.sql  users.sql
tests/: thread_test.py
