[tool.poetry]
name = "ui-automation-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ui_automation_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.97.0"}
selenium = "^4.10.0"
sqlalchemy = "^2.0.16"
pymysql = "^1.0.3"
anyio = "^3.7.0"
flower = "^1.2.0"
celery = "^5.3.0"
httpx = "^0.24.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
